2006-04-06  Christopher Aillon  <caillon@redhat.com>

	* images/nm-logo.png: Logo tweaks from dfong@redhat.com

2005-11-01  Christopher Aillon  <caillon@redhat.com>

	* styles/default.css:
	A few tweaks from Diana Fong.

	* images/wireless-at-tealuxe.png: scale this down a bit

	* index.html: slightly modify the sidebar banner text

2005-10-27  Christopher Aillon  <caillon@redhat.com>

	* styles/default.css:
	Decrease the right margin of #sidebar

2005-10-26  Christopher Aillon  <caillon@redhat.com>

	* Makefile.am:
	* index.html:
	* admins/Makefile.am:
	* admins/index.html:
	* developers/Makefile.am:
	* developers/design_goals.html:
	* developers/index.html:
	* images/Makefile.am:
	* images/nm-logo.png:
	* images/wireless-at-tealuxe.png:
	* images/banners/Makefile.am:
	* images/banners/admins.png:
	* images/banners/developers.png:
	* images/banners/main.png:
	* images/banners/users.png:
	* styles/Makefile.am:
	* styles/default.css:
	* users/Makefile.am:
	* users/index.html:

	Initial NetworkManager projects page