@@ -1,3 +1,7 @@
+2007-06-05  Christopher Aillon  <caillon@redhat.com>
+
+	* developers/index.html: Update for SVN
+
 2006-04-06  Christopher Aillon  <caillon@redhat.com>
 
 	* images/nm-logo.png: Logo tweaks from dfong@redhat.com
